--- a/OdeToFood.Web/Views/Restaurants/Index.cshtml
+++ b/OdeToFood.Web/Views/Restaurants/Index.cshtml
@@ -17,17 +17,18 @@
         <th></th>
     </tr>
 
-@foreach (var restaurant in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => restaurant.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=restaurant.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=restaurant.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=restaurant.Id })
-        </td>
-    </tr>
-}
+    @foreach (var restaurant in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => restaurant.Name)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new {id = restaurant.Id}) |
+                @Html.ActionLink("Details", "Details", new {id = restaurant.Id}) |
+                @Html.ActionLink("Delete", "Delete", new {id = restaurant.Id})
+            </td>
+        </tr>
+    }
 
 </table>
