--- a/OdeToFood.Web/Views/Restaurants/Index.cshtml
+++ b/OdeToFood.Web/Views/Restaurants/Index.cshtml
@@ -9,6 +9,13 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+@using (Html.BeginForm("Index", "Restaurants", FormMethod.Get))
+{
+    <p>
+        Find by name: @Html.TextBox("search", ViewBag.CurrentFilter as string, new {@class = "form-control"})
+        <input type="submit" class="btn btn-primary" style="margin-top: 2px" value="Search"/>
+    </p>
+}
 <table class="table">
     <tr>
         <th>
